# task-manager-ai-agent

./: .env.example  .gitignore  ALPHA_DEMO.md  CLAUDE.md  CLI_USAGE.md  LICENSE  PROJECT_STATUS_SUMMARY.md  QUICK_START.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: agent-zero-source-control-setup.md  ai-agent-task-manager-project-instructions.md  development-checklist.md  optimal-ai-agent-development-roadmap.md
scripts/: demo_calculator_tool.py  demo_cot_reasoning.py  demo_safety_filters.py  demo_web_search_tool.py  format_code.py
src/: __main__.py
src/application/: models.py
src/application/ports/: __init__.py  llm_provider.py  task_repository.py
src/application/use_cases/: plan_project.py  streaming_runner.py
src/domain/: README.md
src/domain/entities/: __init__.py  agent.py  checkpoint.py  task.py  task_planning_agent.py
src/domain/safety/: __init__.py  base.py  basic_filter.py  pii_detector.py
src/domain/services/: checkpoint_service.py  task_decomposer.py
src/domain/tools/: __init__.py  base.py  calculator.py  web_search.py
src/domain/value_objects/: __init__.py  priority.py  task_status.py  time_estimate.py
src/infrastructure/llm/: __init__.py  mock_provider.py  openai_provider.py
src/infrastructure/persistence/: __init__.py  json_task_repository.py
src/interface/: __init__.py  cli.py
tests/: test_cli.py  test_cli_agent.py
tests/integration/: README.md  test_openai_planning.py
tests/unit/: test_cli_model_precedence.py
tests/unit/application/: test_plan_project_use_case.py  test_streaming_runner.py
tests/unit/domain/: test_agent.py  test_agent_calculator_integration.py  test_agent_checkpoint.py  test_agent_safety_integration.py  test_agent_with_tools.py  test_calculator_tool.py  test_cot_reasoning.py  test_pii_detector.py  test_safety_filter.py  test_task.py  test_task_planning_agent.py  test_web_search_tool.py
tests/unit/infrastructure/: test_json_task_repository.py  test_mock_llm_provider.py
